--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "Bu Kinoshita <bukinoshita@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "push": "node push",
-    "pull": "node pull"
+    "push": "./node_modules/.bin/sketch-json",
+    "pull": "./node_modules/.bin/sketch-json --json"
   },
   "dependencies": {
-    "sketch-json": "^0.0.1"
+    "sketch-json-cli": "^0.0.1"
   }
 }
